# nessai-models

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: integration-tests.yml  lint.yml  publish-to-pypi.yml  tests.yml
examples/: basic_example.py  slabspike.py
nessai_models/: __init__.py  base.py  brewer.py  eggbox.py  gaussian.py  gaussianmixture.py  halfgaussian.py  mixture.py  pyramid.py  rosenbrock.py  signals.py  slabspike.py
nessaimodels/: __init__.py  base.py  gaussian.py  gaussianmixture.py  halfgaussian.py  rosenbrock.py
tests/: conftest.py  test_base_models.py  test_gaussian.py  test_gaussianmixture.py  test_mixture.py  test_models.py  test_nessai_integration.py  test_pyramid.py  test_rosenbrock.py  test_signals.py
