[metadata]
name = nessai_models
description = Models for nessai
long_description = file: README.md
long_description_content_type = text/markdown
author = Michael J. Williams
author_email = m.williams.4@research.gla.ac.uk
url = https://github.com/mj-will/nessai-models
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = nested sampling, normalising flows, machine learning

[options]
packages = find:
python requires = >=3.6
install_requires =
    numpy>=1.9
    scipy>=0.16
    nessai>=0.3.1
test_suite = tests
tests_require =
    pytest
    pytest-cov
    pytest-integration

[options.extras_require]
dev =
    pytest
    pytest-cov
    pytest-integration